header\fix poor contrast ratio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,6 @@ body{
     color: #3f3f3f; 
     display: flex;
     flex-direction: column;
-    /* margin: 0; */
    
 }
 
@@ -18,8 +17,8 @@ header {
     background-color: lightgray;
     padding: 20px;
     height: 70px;
-    /* display: flex; */
     justify-content: space-between;
+    color: blue;
     
   }
   
@@ -45,6 +44,10 @@ header {
     padding: 20px;
   }
 
+  header a {
+    color: blue;
+  }
+
   /* hamburger menu hack*/
 input[type=checkbox]{
   display: none;
@@ -59,6 +62,7 @@ input[type=checkbox]{
    
     font-weight: bold;
     font-size: larger;
+    color: red;
     
  }
     footer {
@@ -121,7 +125,7 @@ input[type=checkbox]{
     width: 50%;
     align-self: center;
     height: 500px;
-    border: 1px solid black;
+    border: 2px solid black;
   }
 
   #reset {
@@ -222,7 +226,7 @@ input[type=checkbox]{
     width: 50%;
     align-self: center;
     height: 500px;
-    border: 1px solid black;
+    border: 2px solid black;
 }
 
 form {
@@ -292,6 +296,27 @@ input[type="submit"] {
     font-size: 12px;
     }  
 }
+
+@media only screen and (max-width: 600px) {
+  .error-code {
+    font-size: 100px;
+  }
+  #quote{
+    width: 100%;
+  }
+}
+@media (max-width: 500px) {
+
+  #reset {
+    position: relative;
+    bottom: -30px;
+  }
+  
+  #game_area button {
+  width: 47%;
+  font-size: 7px;
+  }  
+}
 @media (max-width: 476px) {
   header ul {
     display: none;
@@ -323,32 +348,7 @@ input[type="submit"] {
   }
   
 }
-@media only screen and (max-width: 600px) {
-  .error-code {
-    font-size: 100px;
-  }
-  #quote{
-    width: 90%;
-  }
-}
-@media (max-width: 500px) {
-
-  #reset {
-    position: relative;
-    bottom: -30px;
-  }
-  
-  #game_area button {
-  width: 47%;
-  font-size: 7px;
-  }  
-}
-
 @media (max-width: 390px) {
-  #quote{
-    width: none;
-  }
-
   #reset {
     position: relative;
     bottom: -20px;
